Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.1.22
-
None
Description
Adding index in table c1 (zipped CSV file, CONNECT engine) shows error 'UPDATE/DELETE not supported for ZIP'
Documentation says, that optimization by indexing is possible for table types supporting it.
CREATE TABLE `c1` ( |
n int not null, |
`n1` varchar(255) NOT NULL, |
`n2` varchar(255) NOT NULL |
) ENGINE=CONNECT `table_type`=CSV `file_name`='/home/alice/Downloads/xx1.zip' zipped=1 |
-------------
|
Query OK, 0 rows affected (0.05 sec) |
|
|
--------------
|
select * from c1 |
--------------
|
+---+------------+---------+ |
| n | n1 | n2 |
|
+---+------------+---------+ |
| 1 | Alexander | Amy |
|
| 2 | Blaze | Ramona |
|
+---+------------+---------+ |
2 rows in set (0.00 sec) |
|
|
--------------
|
alter table c1 add index (n1) |
--------------
|
ERROR 1296 (HY000) at line 13 in file: '/home/alice/t/c.sql': Got error 122 'UPDATE/DELETE not supported for ZIP' from CONNECT |
|