Fix MDEV-12653 Cannot add index for ZIP CONNECT table   modified:   storage/connect/filamzip.cpp   modified:   storage/connect/ha_connect.cc   modified:   storage/connect/tabdos.cpp   modified:   storage/connect/tabfmt.cpp   modified:   storage/connect/tabjson.cpp   modified:   storage/connect/xindex.cpp